--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "app_id" : "com.moodle.moodlemobile",
-    "appname": "Moodle Mobile",
+    "appname": "LSDB",
     "desktopappname": "Moodle Desktop",
     "versioncode" : "2019",
     "versionname" : "3.3.1",
